Update map - add charging block level, adjust player y-position to fix tile-overlap

--- a/app/assets/stylesheets/game.css.sass
+++ b/app/assets/stylesheets/game.css.sass
@@ -47,14 +47,18 @@ body
       position: absolute
 
   .tile, .mtile
+    line-height: 0
+    font-size: 0
     width: 320px
     height: 320px
     overflow: hidden
-    margin: -2px
+    border: 0
     padding: 0
+    margin: 0
   .tile
     position: relative
-    display: inline-block
+    display: block
+    float: left
   .mtile
     position: absolute
 
